[package]
name = "iyzipay-rust"
version = "0.1.1"
authors = ["İsmail Ata Kurt <atakurt@yandex.com>"]
edition = "2018"
description = "iyzipay rust client"
license = "MIT/Apache-2.0"
keywords = ["iyzico", "payment", "client"]
repository = "https://github.com/atakurt/iyzipay-rust"

[dependencies]
reqwest = "0.9.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.6.0"
sha2 = "0.8.0"
rand = "0.7.3"
hmac = "0.7.0"
base64 = "0.12.3"
chrono = { version = "0.4.15", features = ["serde"] }
bigdecimal = { version="0.2.0", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.6"

[dev-dependencies]
env_logger = "0.7.1"
