[package]
name = "iyzipay-rust"
version = "0.1.2"
authors = ["İsmail Ata Kurt <atakurt@yandex.com>"]
edition = "2018"
description = "iyzipay rust client"
license = "MIT/Apache-2.0"
keywords = ["iyzico", "payment", "client"]
repository = "https://github.com/atakurt/iyzipay-rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.6.0"
sha2 = "0.9.1"
rand = "0.7.3"
hmac = "0.9.0"
base64 = "0.12.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = { version = "0.4.15", features = ["serde"] }
bigdecimal = { version = "0.2.0", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.6"
derive_builder = "0.11.2"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
